--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,11 @@ nav {
 
 }
 
+.window-scroll {
+    background: var(--color-primary);
+    box-shadow: 0 1rem 2rem rgba(0,0,0,0.3);
+}
+
 .nav__container {
     height: 100%;
     display: flex;
@@ -168,9 +173,261 @@ header {
 
 
 
+.categories {
+    background-color: var(--color-bg1);
+    height: 32rem;
+}
+
+.categories h1 {
+    line-height: 1;
+    margin-bottom: 3rem;
+}
+
+.categories__container {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    /* gap: 4rem; */
+}
+
+.categories__left {
+    margin-right: 4rem;
+}
+
+.categories__left p {
+    margin: 1rem 0 3rem;
+}
+
+.categories__left a {
+    /* margin: 1rem 0 3rem; */
+    background: white;
+    color: black;
+    padding: 0.8em 1em;
+    font-weight: 700;
+}
+
+.categories__right {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.2rem;
+}
+
+.category {
+    background-color: var(--color-bg2);
+    padding: 2rem;
+    border-radius: 2rem;
+    transition: var((--transition));
+}
+
+.category:nth-child(2) .category__icon {
+    background-color: var(--color-danger);
+}
+
+.category:nth-child(3) .category__icon {
+    background-color: var(--color-success);
+}
+
+.category:nth-child(4) .category__icon {
+    background-color: var(--color-warning);
+}
+
+.category:nth-child(5) .category__icon {
+    background-color: var(--color-success);
+}
+
+.category:hover {
+    box-shadow: 0 3rem 3rem rgba(0,0,0,0.3);
+    z-index: 1;
+}
+
+.category__icon {
+    background-color: var(--color-primary);
+    padding: 0.7rem;
+    border-radius: 0.9rem;
+}
+
+.category h5 {
+    margin: 2rem 0 1rem;
+
+}
+
+.category p {
+    font-size: 0.85rem;
+}
 
 
 
+
+/* ----- POPULAR COURSES ----- */
+.courses {
+    margin-top: 10rem;
+}
+
+.courses__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.course {
+    background: var(--color-bg1);
+    text-align: center;
+    border: 1px solid transparent;
+    transition: var(--transition);
+}
+
+.course__info {
+    padding: 2rem;
+}
+
+.course:hover {
+    background: transparent;
+    border-color: var(--color-primary);
+}
+
+.course__info p {
+    margin: 1.2rem 0 2rem;
+    font-size: 0.9rem;
+}
+
+
+/* -----  ASKED QUESTIONS ----- */
+.faqs {
+    background: var(--color-bg1);
+    box-shadow: inset 0 0 3rem rgba(0,0,0,0.5);
+}
+
+.faqs__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+.faq {
+    display: flex;
+    padding: 2rem;
+    align-items: center;
+    gap: 1.4rem;
+    height: fit-content;
+    background: var(--color-primary);
+    cursor: pointer;
+}
+
+.faq h4{
+    font-size: 1rem;
+    line-height: 2.2;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.faq__icon {
+    align-self: flex-start;
+    font-size: 1.2rem;
+}
+
+.faq p {
+    margin-top: 0.8rem;
+    display: none;
+}
+
+.faq.open p {
+    display: block;
+}
+
+
+/* -----  TESTIMONIALS ----- */
+.testimonials__container {
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 5rem;
+}
+
+.testimonial {
+    padding-top: 2rem;
+}
+
+.avatar {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto 1rem;
+    border: 1rem solid var(--color-bg1);
+}
+
+.testimonial__info {
+    text-align: center;
+}
+
+.testimonial__body {
+    background-color: var(--color-primary);
+    padding: 2rem;
+    margin-top: 3rem;
+    position: relative;
+}
+
+.testimonial__body::before {
+    content: "";
+    display: block;
+    background: linear-gradient(135deg,transparent, var(--color-primary),var(--color-primary));
+    width: 3rem;
+    height: 3rem;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    
+    top: -1.5rem;
+    transform: rotate(45deg);
+}
+
+
+
+
+/* -----  FOOTER ----- */
+footer {
+    background: var(--color-bg1);
+    padding-top: 5rem;
+    font-size: 0.9rem;
+}
+
+.footer__container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5rem;
+}
+
+.footer__container > div h4 {
+    margin-bottom: 1.2rem;
+
+}
+
+.footer__1 p{
+    margin: 0 0 2rem;
+}
+
+.privacy {
+    padding: 0;
+}
+
+.footer ul li {
+    margin-bottom: 0.7rem;
+}
+
+footer ul li a:hover {
+    text-decoration: underline;
+}
+
+.footer__socials {
+    display: flex;
+    gap: 1rem;  
+    font-size: 1.2rem;
+    margin-top: 2rem;
+    padding: 0;
+}
+
+
+
+/* ========== MEDIA QUERIES ========== */
 
 
 
