--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,13 @@ body {
     line-height: 1.7;
     color: var(--color-white);
     background: var(--color-bg);
-
+    margin: 0;
 }
 
 .container {
     width: var(--container-width-lg);
     margin: auto;
+    padding: 1em;
 }
 
 section {
@@ -428,6 +429,248 @@ footer ul li a:hover {
 
 
 /* ========== MEDIA QUERIES ========== */
+
+@media screen and (max-width: 1024px) {
+
+    .container {
+        width: var(--container-width-md);
+    }
+
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    h2 {
+        font-size: 1.7rem;
+    }
+
+    h3 {
+        font-size: 1.4rem;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+    }
+
+
+    /* NAVBAR */
+
+    nav button {
+        display: inline-block;
+        background: transparent;
+        font-size: 1.8rem;
+        color: var(--color-white);
+        cursor: pointer;
+
+    }
+
+    nav button#close-menu-btn {
+        display: none;
+    }
+
+    .nav__menu {
+        position: fixed;
+        top: 5rem;
+        right: 5%;
+        height: fit-content;
+        width: 18rem;
+        flex-direction: column;
+        gap: 0;
+
+        display: none;
+
+    }
+
+    .nav__menu li {
+        width: 100%;
+        height: 5.8rem;
+        animation: animateNavItems 400ms linear forwards;
+        transform-origin: top right;
+        opacity: 0;
+    }
+
+    .nav__menu li:nth-child(2) {
+        animation-delay: 200ms;
+    }
+
+    .nav__menu li:nth-child(3) {
+        animation-delay: 400ms;
+    }
+
+    .nav__menu li:nth-child(4) {
+        animation-delay: 600ms;
+    }
+
+
+    @keyframes animateNavItems {
+        0% {
+            transform: rotateZ(-90deg) rotateX(-90deg) scale(0.1);
+        }
+        100% {
+            transform: rotateZ(0) rotateX(0) scale(1);
+            opacity: 1;
+        }
+    }
+
+    .nav__menu li a {
+        background-color: var(--color-primary);
+        box-shadow: -4rem 6rem 10rem rgba(0,0,0,0.6);   
+        width: 100%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+    }
+
+    .nav__menu li a:hover {
+        background: var(--color-bg2);
+        color: var(--color-white);
+    }
+
+
+
+    /* HEADER */
+    header {
+        height: 75vh;
+        margin-bottom: 4rem;
+    }
+
+    .header__container {
+        gap: 0;
+        padding-bottom: 3rem;
+    }
+
+
+    /* CATEGORIES */
+    .categories {
+        height: auto;
+
+    }
+
+    .categories__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .categories__left {
+        margin-right: 0;
+    }
+
+
+
+    /* POPULAR COURSES */
+    .courses {
+        margin-top: 0;  
+
+    }
+
+    .courses__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+
+
+    /* FAQS */
+    .faqs__container {
+        grid-template-columns: 1fr;
+    }
+
+    .faq {
+        padding: 1.5rem;
+    }
+
+
+    /* FOOTER */
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+
+
+/* ====== MOBILE VERSION ===== */
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+
+    }
+
+    .nav__menu {
+        right: 3%;
+    }
+
+    /* HEADER */
+    header {
+        height: 120vh;
+    }
+
+    .header__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        margin-top: 0;
+      
+    }
+
+    .header__left p {
+        margin-bottom: 1.3rem;
+
+    }
+
+    /* CATEGORIES */
+    .categories__right {
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem;
+    }
+
+    .category {
+        padding: 1rem;
+        border-radius: 1rem;
+    }
+
+    .category__icon {
+        margin-top: 4px;
+        display: inline-block;
+    }
+
+    /* POPULAR COURSES */
+    .courses__container {
+        grid-template-columns: 1fr;
+    }
+
+
+    /* TESTIMONIALS */
+    .testimonial__body {
+        padding: 1.2rem;
+    }
+
+
+    .testimonial__body {
+        margin-bottom: 2rem;
+    }
+
+    
+    .footer__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        gap: 2rem;
+    }
+
+    .footer__1 p {
+        margin: 1rem auto;
+
+    }
+
+    .footer__socials {
+        justify-content: center;
+
+    }
+
+
+
+
+}
+
+
+
 
 
 
